<?xml version="1.0"?>
<package format="3">
  <name>camera_driver</name>
  <version>0.1.0</version>
  <description>
    OAK-D Pro front camera driver with Flask web dashboard,
    hardware H.265 encoding, and live parameter control.
    Later: RPi Camera V2 NoIR rear camera.
  </description>
  <maintainer email="you@todo.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Only needed when ROS2 image publishing is uncommented -->
  <!-- <depend>cv_bridge</depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>