<?xml version="1.0"?>
<package format="3">
  <name>led_driver</name>
  <version>0.1.0</version>
  <description>MOSFET LED strip driver via gpiozero PWM</description>
  <maintainer email="you@todo.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>