<?xml version="1.0"?>
<package format="3">
  <name>steering_servo</name>
  <version>0.1.0</version>
  <description>DS3235 steering servo driver via Pi 5 hardware PWM for Ackermann steering</description>
  <maintainer email="you@todo.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>